--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-dom": "16.0.3",
     "google-maps-react": "1.1.2",
     "material-ui": "0.20.0",
     "react": "16.2.0",
